--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,17 +1,24 @@
-.sidebar{
-  
-    height: 100vh;
+.sidebar {
+    display: flex;
+    flex-direction: column;
     flex: 0.2;
-    color: white;
     padding-left: 10px;
     padding-right: 10px;
-    height: 100vh;
     min-width: 230px;
+    height: 100vh;
+    color: white;
     background-color: #040404;
-}
-
-.sidebar__logo{
+  }
+  
+  .sidebar__title {
+    margin-left: 10px;
+    padding: 5px;
+    font-size: 12px;
+  }
+  
+  .sidebar__logo {
+    margin-right: auto;
+    object-fit: contain;
     height: 70px;
     padding: 10px;
-    margin-right: auto;
-}
+  }
